<resources>
    // properties
    <string name="app_name">Bahi Khata</string>
    <string name="font_app_name">fonts/Cookie-Regular.ttf</string>
    <string name="facebook_app_id">325916787963647</string>
    <string name="fb_login_protocol_scheme">fb325916787963647</string>

    // validations, errors and exceptions
    <string name="exception_facebook">Facebook Exception</string>
    <string name="error_empty_field">Fields are Empty</string>
    <string name="error_signin">Problem with Sign In</string>
    <string name="unlock_app">Unlock Bahi Khata</string>
    <string name="confirm_pattern_message">Confirm your screen lock pattern, PIN or password</string>

    // literals
    <string name="OPEN">Open</string>
    <string name="CLOSE">Close</string>
    <string name="MESSAGE">message</string>
    <string name="AMOUNT">amount</string>
    <string name="EMPTY_STRING"> </string>
    <string name="DATE">Date</string>
    <string name="LOGOUT">Logout</string>
    <string name="ERROR">Error</string>
    <string name="CANCELLED">Cancelled</string>
    <string name="PHONE">Phone</string>
    <string name="EMAIL">Email</string>
    <string name="ADD_TRANSACTION">Add Transaction</string>
    <string name="SAVE">Save</string>
    <string name="CANCEL">Cancel</string>
    <string name="EDIT_TRANSACTION">Edit Transaction</string>
    <string name="INCOME">Income</string>
    <string name="EXPENSE">Expense</string>

    // symbols
    <string name="currency_rupee">\u20B9</string>
    <string name="ellipses">&#8942;</string>

    // success messages
    <string name="success_registration">Registration Successful</string>

    // failure messages
    <string name="fail_authentication">Authentication Failed</string>
    <string name="fail_google_signin">Google sign in failed</string>
    <string name="fail_firebase_registration">Firebase Registration Failed</string>
    <string name="fail_registration">Registration Failed</string>

    // spinners
    <array name="transactionTypes">
        <item>Credit</item>
        <item>Debit</item>
        <item>Notes</item>
    </array>

    // new
    <string name="OTHER_LOGIN_METHODS">Other Log In</string>
    <string name="LOGN_FACEBOOK">Facebook</string>
    <string name="LOGIN_GMAIL">Gmail</string>
    <string name="LOGIN_PHONE">Phone</string>
    <string name="LOGIN_EMAIL">Email</string>
    <string name="OR">OR</string>
    <string name="HOME">Home</string>
    <string name="REPORT">Report</string>
    <string name="CHANGE_LANGUAGE">Change Language</string>
    <string name="SIGN_IN_PHONE">Phone Sign In</string>
    <string name="SIGN_IN_EMAIL">Email Sign In</string>
    <string name="PHONE_NUMBER">Phone Number</string>
    <string name="SEND_OTP">Send OTP</string>
    <string name="REGISTER">Register</string>
    <string name="PASSWORD">Password</string>
    <string name="EXISTING_USER">Existing User?</string>
    <string name="SIGN_IN">Sign In</string>
    <string name="RESET_PASSWORD">Reset Password</string>
    <string name="FORGOT_PASSWORD">Forgot Password?</string>
    <string name="NEW_USER">New User?</string>
    <string name="contentDescriptionMobileImage">Mobile\'s Picture</string>
    <string name="contentDescriptionGmailImage">Gmail\'s Picture</string>
    <string name="contentDescriptionFacebookImage">Facebook\'s Picture</string>
    <string name="contentDescriptionImportantTxImage">Important Transaction\'s Picture</string>
    <string name="contentDescriptionCloseLayoutImage">Close Layout\'s Picture</string>
    <string name="contentDescriptionCalendarImage">Calendar\'s Picture</string>
    <string name="TIME">Time</string>
    <string name="OTP">One Time Password (OTP)</string>
    <string name="resolvebugEmailId">resolvebug@gmail.com</string>
    <string name="IMPORTANT">Important</string>
    <string name="SETTINGS">Settings</string>
    <string name="RATE_US">Rate Us</string>
    <string name="SHARE">Share</string>
    <string name="ABOUT_US">About Us</string>
    <string name="contentDescriptionBackButtonImage">Back Button</string>
    <string name="DISPLAY_HISTORY_MESSAGE">Click on Amount to view transaction history</string>
    <string name="ADD_INCOME">ADD INCOME</string>
    <string name="ADD_EXPENSE">ADD EXPENSE</string>
    <string name="AMOUNT_IN_RUPEE">Amount (\u20B9)</string>
    <string name="TAP_AND_HOLD_CARD_MESSAGE">Tap and hold for more options</string>
    <string name="THEME">Theme</string>
    <string name="NIGHT_MODE">Night Mode</string>
    <string name="NIGHT_MODE_DESCRIPTIVE_MESSAGE">Light text on dark background</string>
    <string name="ENGLISH">English</string>
    <string name="CURRENT_LANGUAGE">Current Language</string>
    <string name="LANGUAGE_SELECTION_MESSAGE">Tap to select app language</string>
    <string name="ALL_LANGUAGES">All languages</string>
    <string name="APP_LANGUAGE">App language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>