<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    tools:context=".AddTransactionActivity">

    <FrameLayout
        android:id="@+id/settings_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/titlebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dp2">

                    <android.support.v7.widget.Toolbar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary">

                        <ImageView
                            android:id="@+id/backButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/contentDescriptionBackButtonImage"
                            android:src="@drawable/ic_baseline_arrow_back_white_24px" />

                        <TextView
                            android:id="@+id/pageTitle"
                            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/SETTINGS"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/sp30" />


                    </android.support.v7.widget.Toolbar>

                </android.support.design.widget.AppBarLayout>

            </LinearLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/adView"
                android:layout_below="@id/titlebar"
                android:background="@color/colorWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/dp16">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/THEME"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/sp16"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:layout_width="@dimen/dp20"
                                    android:layout_height="@dimen/dp2"
                                    android:layout_marginTop="@dimen/dp5"
                                    android:background="@color/heading_underline_color" />

                            </LinearLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp20"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/NIGHT_MODE"
                                        android:textColor="@color/black" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/NIGHT_MODE_DESCRIPTIVE_MESSAGE" />

                                </LinearLayout>

                                <Switch
                                    android:id="@+id/darkThemeSwitch"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true" />

                            </RelativeLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp1"
                        android:background="@color/layout_separator_color" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/languageChangeCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/dp16">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/CHANGE_LANGUAGE"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/sp16"
                                    android:textStyle="bold" />

                                <LinearLayout
                                    android:layout_width="@dimen/dp20"
                                    android:layout_height="@dimen/dp2"
                                    android:layout_marginTop="@dimen/dp5"
                                    android:background="@color/heading_underline_color" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp20"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/CURRENT_LANGUAGE"
                                    android:textColor="@color/black" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/ENGLISH" />

                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp1"
                        android:background="@color/layout_separator_color" />

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />


        </RelativeLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>