<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/layout_background_color"
    android:clickable="true"
    android:focusable="true"
    tools:context=".LanguageSupportFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dp2">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/contentDescriptionBackButtonImage"
                        android:src="@drawable/ic_baseline_arrow_back_white_24px" />

                    <TextView
                        android:id="@+id/pageTitle"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/CHANGE_LANGUAGE"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/sp30" />


                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/adView"
            android:layout_below="@id/titlebar"
            android:background="@color/colorWhite">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ALL_LANGUAGES"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp2"
                        android:layout_marginTop="@dimen/dp5"
                        android:background="@color/heading_underline_color" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp16">

                    <RadioButton
                        android:id="@+id/englishLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/dp30"
                        android:paddingEnd="@dimen/dp30"
                        android:text="@string/ENGLISH" />

                    <RadioButton
                        android:id="@+id/hindiLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp5"
                        android:paddingStart="@dimen/dp30"
                        android:paddingEnd="@dimen/dp30"
                        android:text="@string/HINDI" />

                    <RadioButton
                        android:id="@+id/marathiLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp5"
                        android:paddingStart="@dimen/dp30"
                        android:paddingEnd="@dimen/dp30"
                        android:text="@string/MARATHI" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp80">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/LANGUAGE_SELECTION_MESSAGE"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>