<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorCardViewBackground"
    android:clickable="true"
    android:focusable="true"
    tools:context=".AddTransactionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dp2">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/contentDescriptionBackButtonImage"
                        android:src="@drawable/ic_baseline_arrow_back_white_24px" />

                    <TextView
                        android:id="@+id/pageTitle"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_name"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/sp30" />


                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/adView"
            android:layout_below="@id/titlebar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="@dimen/dp30"
                            android:text="@string/ADD_TRANSACTION"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp20" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/dp30"
                        android:layout_height="@dimen/dp2"
                        android:layout_marginStart="@dimen/dp30"
                        android:layout_marginTop="@dimen/dp10"
                        android:background="@color/red" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputTxAmount"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:hintEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp30"
                        android:layout_marginRight="@dimen/dp30"
                        android:hint="@string/AMOUNT_IN_RUPEE"
                        android:textColorHint="@color/black">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/transactionAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:maxLength="10"
                            android:textSize="20sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputTxMessage"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:counterEnabled="true"
                        app:counterMaxLength="200"
                        app:hintEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp30"
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_marginRight="@dimen/dp30"
                        android:hint="@string/MESSAGE"
                        android:textColorHint="@color/black">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/transactionMessage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textAutoComplete" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/saveTransactionLayout"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

        <LinearLayout
            android:id="@+id/saveTransactionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/saveTransactionButton"
                style="@style/Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:text="@string/SAVE"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>